Cleaned script.js and little change to style.scss

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,7 +12,7 @@ $primary-color: black;
 	width: 100%;
 	margin: 0 auto;
 	height: 20rem;
-	background-color: yellow;
+	background-color: transparent;
 	z-index: 2;
 
 
