--- a/css/style.css
+++ b/css/style.css
@@ -1013,7 +1013,7 @@ table {
   width: 100%;
   margin: 0 auto;
   height: 20rem;
-  background-color: yellow;
+  background-color: transparent;
   z-index: 2; }
   .slider-container .slider {
     position: relative;
